unpackaged/main/default/objects/Significant_Event__c/Significant_Event__c.object-meta.xml
<CustomObject>
    <label>Significant Event</label>
    <nameField>
        <label>Significant Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Significant Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>