unpackaged/main/default/objects/Significant_Event__c/fields/Approximate_Date__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the exact date is unknown</inlineHelpText>
    <label>Approximate Date</label>
    <type>Checkbox</type>
</CustomField>