unpackaged/main/default/objects/Significant_Event__c/fields/End_Date_Optional__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Optional__c</fullName>
    <label>End Date (Optional)</label>
    <type>Date</type>
</CustomField>