unpackaged/main/default/objects/Significant_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Dream Vacation</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Health Diagnosis</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>New Baby</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>New Home</fullName>
            </value>
            <value>
                <fullName>New Job</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Service Mission</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>