unpackaged/main/default/objects/Significant_Event__c/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Significant Events</relationshipLabel>
    <relationshipName>Significant_Events</relationshipName>
    <type>Lookup</type>
</CustomField>