unpackaged/main/default/objects/Significant_Event__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business, Institution, Household, Trust</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Significant Events</relationshipLabel>
    <relationshipName>Significant_Events</relationshipName>
    <type>Lookup</type>
</CustomField>