unpackaged/main/default/objects/Significant_Event__c/fields/Other_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Event_Type__c</fullName>
    <label>Other Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>