unpackaged/main/default/objects/Significant_Event__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account, Prospect, Diversify Related Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Significant Events (Person)</relationshipLabel>
    <relationshipName>Significant_Events_Person</relationshipName>
    <type>Lookup</type>
</CustomField>