unpackaged/main/default/objects/Significant_Event__c/fields/Record_Id_Check__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_Check__c</fullName>
    <description>Used for conditional field visibility on the Lightning record page layout</description>
    <formula>ISBLANK(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Id Check</label>
    <type>Checkbox</type>
</CustomField>